-minor fix: z-index on carousel adjusted

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,102 +17,6 @@
     --twitter: rgb(29 155 240);
 }
 
-.bg-orange{
-    background-color: rgb(255 160 44);
-}
-
-.gap-10{
-    gap: 10vw;
-}
-
-.text-active{
-    font-weight: 500;
-    color: rgb(235 235 235);
-}
-
-.text-molendra{
-    font-family: Molendra, sans-serif;
-}
-
-.text-pacifico{
-    font-family: Pacifico, sans-serif;
-}
-
-.text-balleny{
-    font-family: Balleny, sans-serif;
-}
-
-.red-custom{
-    color: rgb(218 43 31);
-}
-
-.content{
-    padding: 30px;
-}
-
-.sticky{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-}
-
-.sticky + .content {
-    padding-top: 60px;
-}
-
-.navbar{
-    z-index: 2;
-}
-
-.width-95{
-    width: 95%;
-}
-
-.img-steps-recipe:hover{
-    cursor: pointer;
-}
-
-.toggle-z-index{
-    z-index: 1050;
-}
-
-.overlay{
-    width:100%;
-    height:100%;
-    position:absolute;
-    background-color:rgb(24 24 24);
-    opacity: 0.5;
-    border-radius:30px;
-}
-
-.d-none-custom{
-    display: none;
-}
-
-.mt-5-cm {
-    margin-top: 3rem;
-}
-
-.px-4-cm {
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-}
-
-.py-4-cm {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-}
-
-.pe-5-cm {
-    padding-right: 3rem;
-}
-
-.mx-5-cm {
-    margin-right: 3rem;
-    margin-left: 3rem;
-}
-
 /* ----- Header ----- */
 #header-image{
     width: 100%;
@@ -606,4 +510,106 @@ body{
 #map-contacto{
     width: 50%;
     height: 350px;
+}
+
+/* Arreglos de estilos generales */
+
+.bg-orange{
+    background-color: rgb(255 160 44);
+}
+
+.gap-10{
+    gap: 10vw;
+}
+
+.text-active{
+    font-weight: 500;
+    color: rgb(235 235 235);
+}
+
+.text-molendra{
+    font-family: Molendra, sans-serif;
+}
+
+.text-pacifico{
+    font-family: Pacifico, sans-serif;
+}
+
+.text-balleny{
+    font-family: Balleny, sans-serif;
+}
+
+.red-custom{
+    color: rgb(218 43 31);
+}
+
+.content{
+    padding: 30px;
+}
+
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.sticky + .content {
+    padding-top: 60px;
+}
+
+.navbar{
+    z-index: 2;
+}
+
+.width-95{
+    width: 95%;
+}
+
+.img-steps-recipe:hover{
+    cursor: pointer;
+}
+
+.toggle-z-index{
+    z-index: 1050;
+}
+
+.overlay{
+    width:100%;
+    height:100%;
+    position:absolute;
+    background-color:rgb(24 24 24);
+    opacity: 0.5;
+    border-radius:30px;
+}
+
+.d-none-custom{
+    display: none;
+}
+
+.mt-5-cm {
+    margin-top: 3rem;
+}
+
+.px-4-cm {
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+}
+
+.py-4-cm {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
+.pe-5-cm {
+    padding-right: 3rem;
+}
+
+.mx-5-cm {
+    margin-right: 3rem;
+    margin-left: 3rem;
+}
+
+.carousel-indicators{
+    z-index: 1;
 }
